# nvda-client

./: README.md  pyproject.toml
nvda_client/: __init__.py  main.py
